Mainpage, Stylesheet, Loginpage creation
Beginning of the project. Rough estimation of my CSS and HTML skills. Rough skeleton of Navbar, Body, Footer in the homepage. Creation of the Loginpage. Experimenting with adding pictures and links.

As of now, no problems reported. Further plan.
-Design the Navbar.
-Design the Footer.
-Make an introduction page.
-Create a login page (HTML and CSS).

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="stylesheet.css" rel="stylesheet">
     <title>Japonaisme</title>
 </head>
 <body>
@@ -19,14 +20,17 @@
 
     </div>
     <div class="first-element">
-    <img src="pictures/header-fuji.jpg" alt="A picture with Fujijama-san">
     <h1>The Land of The Rising Sun</h1>
     <p>Learn more about Japan</p>
     <p>Culture. History. Language</p>
     </div>
     <footer class="summary">
         <a class="grammar" href="https://bunpro.jp/dashboard">Learn Japanese Grammar!</a>
-
+        <ul>
+            <li>History</li>
+            <li>Culture</li>
+            <li>Language</li>
+        </ul>
     </footer>
 </body>
 </html>
