CSS edit Navbar and Header. Sign-up HTML code. Flexbox+BackgrImg tutorial. Logo creation.
Adjusted the Homepage of the project. Added visual effects to Navigation bar,
adjusted the image inside the body(header), changed a picture that was used,
rough skeleton-structure of the Sign-up page. Creation of the logo in a
graphic redactor.

Next goals:
-Give CSS editing of the Sign-up page.
-Find a suitable color palette for the website.
-Find content for the Homepage.
-Make a rough introduction for the history part.

--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
     <title>Japonaisme</title>
 </head>
 <body>
-    <div class="navbar">
-        <ul class="navigation-bar">
-            <li class="navbaroption">Japonaisme</li>
-            <li class="navbaroption">Destinations</li>
-            <li class="navbaroption">Interests</li>
-            <li class="navbaroption">History</li>
-            <li class="navbaroption">Languages</li>
-            <a class="login" href="./loginpage.html" <li class="navbaroption">Sign In</li></a>
+<header>
+    <div class="container">
+        <a href="index.html"><img src="./pictures/logo.png" alt="fuji-logo" class="logo"><li class="logo-text">Japonaise</li></a>
+        <nav>
+            <ul class="navigation-bar">     
+                <li class="navbaroption"><a href="">Destinations</a></li>
+                <li class="navbaroption"><a href="">Interests</a></li>
+                <li class="navbaroption"><a href="">History</a></li>
+                <li class="navbaroption"><a href="">Languages</a></li>
+                <li class="navbaroption"><a class="login" href="./loginpage.html">Sign In</a></li>
+            </nav>
         </ul>
-
     </div>
+</header>
     <div class="first-element">
     <h1>The Land of The Rising Sun</h1>
     <p>Learn more about Japan</p>
